[gd_scene load_steps=9 format=3 uid="uid://behkac7sg4loi"]

[ext_resource type="Script" uid="uid://dv3rjr57hmwij" path="res://scripts/menus/mode_selection.gd" id="1_2ojwj"]
[ext_resource type="PackedScene" uid="uid://28ale2iku1n4" path="res://scenes/game/game_play.tscn" id="2_qmget"]
[ext_resource type="Resource" uid="uid://dso7a1vuipkqt" path="res://resources/modes/classic_mode_config.tres" id="3_qabyd"]
[ext_resource type="Resource" uid="uid://djrsravpjyj8" path="res://resources/modes/fibonacci_mode_config.tres" id="4_yd8il"]
[ext_resource type="Resource" uid="uid://dlv621h6njs6m" path="res://resources/modes/lucas_fibonacci_mode_config.tres" id="5_eklse"]
[ext_resource type="Resource" uid="uid://da3ioky106k1i" path="res://resources/modes/progressive_mode_config.tres" id="6_wqj5v"]
[ext_resource type="Resource" uid="uid://dklmno2p3q4r5" path="res://resources/modes/step_by_step_mode_config.tres" id="7_n1d6p"]
[ext_resource type="Resource" uid="uid://bnt3ah04gd5v2" path="res://resources/modes/battle_mode_config.tres" id="8_dsnfc"]

[node name="ModeSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ojwj")
game_play_scene = ExtResource("2_qmget")
mode_configs = Array[Resource]([ExtResource("3_qabyd"), ExtResource("4_yd8il"), ExtResource("5_eklse"), ExtResource("6_wqj5v"), ExtResource("7_n1d6p"), ExtResource("8_dsnfc")])

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainLayout" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="LeftPanel" type="VBoxContainer" parent="CenterContainer/MainLayout"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MainLayout/LeftPanel"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
text = "è¯·ä»ä¸­é—´é€‰æ‹©ä¸€ä¸ªæ¸¸æˆæ¨¡å¼"
autowrap_mode = 2

[node name="CenterPanel" type="VBoxContainer" parent="CenterContainer/MainLayout"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="CenterContainer/MainLayout/CenterPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "æ¨¡å¼é€‰æ‹©"
horizontal_alignment = 1

[node name="ModeListContainer" type="VBoxContainer" parent="CenterContainer/MainLayout/CenterPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 440)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/MainLayout/CenterPanel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PrevPageButton" type="Button" parent="CenterContainer/MainLayout/CenterPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "ä¸Šä¸€é¡µ"

[node name="NextPageButton" type="Button" parent="CenterContainer/MainLayout/CenterPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "ä¸‹ä¸€é¡µ"

[node name="BackButton" type="Button" parent="CenterContainer/MainLayout/CenterPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "è¿”å›"

[node name="RightPanelContainer" type="VBoxContainer" parent="CenterContainer/MainLayout"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MainLayout/RightPanelContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MainLayout/RightPanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/MainLayout/RightPanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MainLayout/RightPanelContainer/HBoxContainer"]
layout_mode = 2
text = "æ£‹ç›˜å¤§å°ï¼š"

[node name="SpinBox" type="SpinBox" parent="CenterContainer/MainLayout/RightPanelContainer/HBoxContainer"]
layout_mode = 2
rounded = true

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/MainLayout/RightPanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MainLayout/RightPanelContainer/HBoxContainer2"]
layout_mode = 2
text = "æ¸¸æˆç§å­ï¼š"

[node name="SeedLineEdit" type="LineEdit" parent="CenterContainer/MainLayout/RightPanelContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "ç•™ç©ºåˆ™éšæœº"
select_all_on_focus = true
caret_blink = true

[node name="RefreshSeedButton" type="Button" parent="CenterContainer/MainLayout/RightPanelContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "ç‚¹å‡»ä»¥ç”Ÿæˆæ–°çš„éšæœºç§å­"
text = "ğŸ²"
flat = true

[node name="Spacer" type="Control" parent="CenterContainer/MainLayout/RightPanelContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StartGameButton" type="Button" parent="CenterContainer/MainLayout/RightPanelContainer"]
layout_mode = 2
disabled = true
text = "å¼€å§‹æ¸¸æˆ"
